--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <section id="about" class="about">
       <h2 class="section-title">About Us</h2>
       <p>
-        Hotel Paradise is a family-owned luxury hotel offering a peaceful retreat with modern amenities. Located near the lush green hills of Chitwan, our hotel blends traditional hospitality with world-class comfort.
+        Hotel R.Chitwan is a family-owned luxury hotel offering a peaceful retreat with modern amenities. Located near the lush green hills of Chitwan, our hotel blends traditional hospitality with world-class comfort.
       </p>
     </section>
 
@@ -203,3 +203,4 @@
 
 </body>
 </html>
+
